--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@hookform/resolvers": "^2.9.8",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "firebase": "^9.12.1",
     "next": "latest",
     "next-themes": "^0.2.1",
     "prop-types": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.36.1",
+    "react-icons": "^4.6.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
