--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-dom": "latest",
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.36.1",
-    "react-icons": "^4.6.0",
+    "react-toastify": "^9.0.8",
     "yup": "^0.32.11"
   },
   "devDependencies": {
