--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "firebase": "^9.12.1",
+    "js-cookie": "^3.0.1",
     "next": "latest",
     "next-themes": "^0.2.1",
-    "prop-types": "latest",
+    "prop-types": "^15.8.1",
     "react": "latest",
     "react-dom": "latest",
     "react-firebase-hooks": "^5.0.3",
